# GameVault

./: .gitignore  Dockerfile  Dockerfile.test  Dockerfile.windows  README.md  SECURITY.md  build-portable.ps1  build.ps1  config.example.toml  dev.ps1  docker-compose.yml  start.ps1  stop.ps1
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-release.yml  ci.yml  docs.yml  release.yml  security.yml
backend/: Cargo.toml  build.rs  gamevault.manifest
backend/src/: config.rs  db.rs  embedded.rs  handlers.rs  local_storage.rs  main.rs  models.rs  scanner.rs  steam.rs  tray.rs
docs/: CONFIGURATION_PAGE_PLAN.md  ENRICHMENT_ARCHITECTURE.md  FEATURE_PLAN.md  FEATURE_PLAN_EDIT_AND_DETAILS.md  PORTABLE_EXECUTABLE_PLAN.md  configuration.md  development.md  docusaurus.config.js  faq.md  intro.md  package.json  sidebars.js  usage.md
docs/api/: examples.md
docs/architecture/: backend.md  database.md  embedding.md  frontend.md  overview.md
docs/backend/: database.md  handlers.md  local-storage.md  overview.md  scanner.md  steam.md
docs/components/: adjust-match-modal.md  edit-modal.md  game-card.md  game-menu.md  overview.md  settings-modal.md
docs/docusaurus/: faq.md  getting-started.md  intro.md  settings.md  sidebars.js  usage.md
docs/docusaurus/api/: endpoints.md  overview.md
docs/src/css/: custom.css
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdjustMatchModal.test.tsx  AdjustMatchModal.tsx  EditModal.test.tsx  EditModal.tsx  EnrichModal.tsx  GameCard.tsx  GameMenu.test.tsx  GameMenu.tsx  SearchBar.tsx  SettingsModal.tsx  StatsBar.tsx
frontend/src/lib/: api.ts
