[package]
name = "gamevault-backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
regex = "1.10"
strsim = "0.11"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
futures = "0.3"

# URL encoding
percent-encoding = "2.3"
urlencoding = "2.1"

# Error handling
anyhow = "1.0"

# Portable executable support
rust-embed = { version = "8.2", features = ["compression"] }
mime_guess = "2.0"
open = "5.0"

# Configuration
config = "0.14"
toml = "0.8"

# System tray (Windows)
[target.'cfg(windows)'.dependencies]
tray-icon = "0.19"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
